stderr
HikerTest.java:15: error: cannot find symbol
        actual = aa.judge(hand);
        ^
  symbol:   variable actual
  location: class HikerTest
HikerTest.java:16: error: cannot find symbol
        assertEquals("No Hand", actual);
                                ^
  symbol:   variable actual
  location: class HikerTest
2 errors
